--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@untitledui/icons": "^0.0.19",
+    "lucide-react": "^0.544.0",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-aria-components": "^1.12.0",
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
